# airlift-node

./: .gitignore  Cargo.toml  Dockerfile  README.md  TESTING.md  airlift.liq  airlift.toml  config.backup.toml  config.sample.toml  config.toml  config.toml.backup  config.vps.toml  docker-compose.yml  fix_024_001.sh  fix_024_002.sh  fix_024_003.sh  fix_027_001.sh  hallo_echo.txt  mixer_test.toml  patch_001.sh  patch_002.sh  patch_003.sh  patch_004.sh  patch_005.sh  patch_006.sh  patch_007.sh  patch_008.sh  patch_009.sh  patch_010.sh  patch_011.sh  patch_012.sh  patch_013.sh  patch_014.sh  patch_015.sh  patch_016.sh  patch_017.sh  patch_018.sh  patch_019.sh  patch_020.sh  patch_021.sh  (+35 more)
benches/: mixer_bench.rs  ringbuffer_bench.rs
config/: development.toml  docker.toml  production.toml
deploy/: airlift-node.service  prometheus.yml
docs/: ARCHITECTURE.md  PERFORMANCE.md  TLS.md
examples/: audio_mixing.rs  custom_processor.rs  live_streaming.rs  simple_recording.rs
public/: AudioIOTest.html  aircheck_ui.html  index.html  player.js  player.js.backup  status.html  status10.html  status11.html  status12.html  status13.html  status14.html  status15.html  status2.html  status3.html  status4.html  status5.html  status6.html  status7.html  status8.html  status9.html  test.html
public/player/: index.html  main.js  player-input.js  player.js
public/recorder/: index.html  recorder.js  style.css
public/status/: index.html  main.js  style.css  ui.js  waveform.js
public/visualizer/: app.js  audio-capture.js  index.html  styles.css
server/: yamnet_server.py  yamnet_server1.py  yamnet_server2.py
src/: bootstrap.rs  config.rs  control.rs  lib.rs  main.rs  main.test_backup.rs  monitoring.rs  test_mod.rs  test_simple.rs
src.backup/: control.rs  main.rs
src.backup/agent/: mod.rs
src.backup/api/: service.rs
src.backup/audio/: live.rs
src.backup/codecs/: mp3.rs
src.backup/config/: mod.rs  mod.rs.save
src.backup/container/: mod.rs
src.backup/core/: mod.rs  mod.rs.save
src.backup/decoder/: mod.rs
src.backup/io/: alsa_in.rs  file_in.rs  icecast_in.rs  icecast_meta_out.rs  icecast_out.rs  influx_out.rs  mod.rs  peak_analyzer.rs  srt_in.rs  udp_out.rs
src.backup/processors/: mod.rs  peak.rs
src.backup/producers/: alsa.rs  file.rs  mod.rs
src.backup/ring/: audio_ring.rs  encoded_ring.rs  mod.rs
src.backup/services/: mod.rs
src.backup/web/: peaks.rs
src/agent/: mod.rs
src/api/: README.md  catalog.rs  config.rs  control.rs  mod.rs  peaks.rs  recorder.rs  registry.rs  service.rs  status.rs  ws.rs
src/app/: configurator.rs  init.rs  mod.rs
src/audio/: http.rs  (+5 more)
tests/: core_status_tests.rs  flow_e2e.rs  flow_smoke_tests.rs  integration_tests.rs  logging_tests.rs  pcm_codec_tests.rs  ringbuffer_lockfree_tests.rs  ringbuffer_tests.rs  run_logging_tests.rs  standalone_test.rs  threading_contention.rs
(+136 files in other folders)
