[package]
name = "airlift-node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
ureq = "2.9"
serde_json = "1"
toml = "0.8"
crossbeam = "0.8"
axum = { version = "0.7", features = ["macros", "ws", "json"] }
alsa = "0.9"
byteorder = "1.5"
hound = "3.5.1"
chrono = "0.4.42"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
ogg = "0.8"
opus = "0.3"
lame = "0.1.3"    # Für MP3 Encoding
rand = "0.8"
urlencoding = "2.1.3"
ctrlc = "3.4"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
srt-tokio = "0.3"
futures-util = "0.3"
bytes = "1"
tiny_http = "0.12"
bytemuck = "1.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
