[package]
name = "airlift-node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
ureq = "2.9"
serde_json = "1"
toml = "0.8"
crossbeam = "0.8"
axum = { version = "0.7", features = ["macros", "ws", "json"] }
alsa = { version = "0.9", optional = true }
byteorder = "1.5"
vorbis = "0.1"
hound = "3.5.1"
chrono = "0.4.42"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
ogg = "0.8"
opus = "0.3"
lame = { version = "0.1.3", optional = true }
rand = "0.8"
urlencoding = "2.1.3"
ctrlc = "3.4"
tiny_http = "0.12"
bytemuck = "1.15"
symphonia = { version = "0.5.5", features = [
    "ogg",
    "vorbis",
    "mp3",
    "isomp4",
] }

#influxdb2 = { version = "0.5.1", features = ["reqwest"] }

# Async Runtime
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tokio-stream = "0.1"

# SRT (nutzt tokio)
srt-tokio = "0.3"
futures-util = "0.3"
bytes = "1"

# Web Framework (axum braucht bestimmte tokio features)
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
hyper = "0.14"

# WebSocket
futures = "0.3"
once_cell = "1.21.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = ["audio"]
audio = ["alsa", "mp3"]
mp3 = ["lame"]
mock-audio = []
