# Cargo.toml
[package]
name = "airlift-node"
version = "0.2.0"
edition = "2021"

# Hauptbinary
[[bin]]
name = "airlift-node"
path = "src/main.rs"

# Integration Tests (als externe Crate)
[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

# Standalone Test Binary
[[test]]
name = "standalone_test"
path = "tests/standalone_test.rs"
harness = false  # WICHTIG: Damit es als Binary kompiliert wird!

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
alsa = "0.9"
ctrlc = "3"
notify = "6"
crossbeam-channel = "0.5"
nix = "0.27"
tiny_http = "0.12"
hound = "3.5"
bytemuck = "1.14"

[features]
lockfree = []
